--- a/scripts/Omarchy-Linux-Arch/HAProxy/haproxy.cfg
+++ b/scripts/Omarchy-Linux-Arch/HAProxy/haproxy.cfg
@@ -48,32 +48,31 @@ listen stats
 listen api-server-6443 
   bind *:6443
   mode tcp
-  option  httpchk GET /readyz HTTP/1.0
-  option  log-health-checks
   balance roundrobin
-  server bootstrap bootstrap.okd.ms1.lan:6443 verify none check inter 10s fall 2 rise 3 backup 
-  server control-plane1 control-plane1.okd.ms1.lan:6443 weight 1 verify none check inter 10s fall 2 rise 3
-  server control-plane2 control-plane2.okd.ms1.lan:6443 weight 1 verify none check inter 10s fall 2 rise 3
-  server control-plane3 control-plane3.okd.ms1.lan:6443 weight 1 verify none check inter 10s fall 2 rise 3
+#  server bootstrap 10.0.0.145:6443 check backup 
+  server control-plane1 10.0.0.150:6443 check
+  server control-plane2 10.0.0.151:6443 check
+  server control-plane3 10.0.0.152:6443 check
 
 listen machine-config-server-22623
   bind *:22623
   mode tcp
-  server bootstrap bootstrap.okd.ms1.lan:22623 check inter 1s backup 
-  server control-plane1 control-plane1.okd.ms1.lan:22623 check inter 1s
-  server control-plane2 control-plane2.okd.ms1.lan:22623 check inter 1s
-  server control-plane3 control-plane3.okd.ms1.lan:22623 check inter 1s
+#  server bootstrap 10.0.0.145:22623 check backup 
+  server control-plane1 10.0.0.150:22623 check
+  server control-plane2 10.0.0.151:22623 check
+  server control-plane3 10.0.0.152:22623 check
 
 listen ingress-router-443 
   bind *:443
   mode tcp
   balance source
-  server compute1 compute1.okd.ms1.lan:443 check inter 1s
-  server compute2 compute2.okd.ms1.lan:443 check inter 1s
+  server compute1 10.0.0.155:443 check
+  server compute2 10.0.0.160:443 check
 
 listen ingress-router-80 
   bind *:80
   mode tcp
   balance source
-  server compute1 compute1.okd.ms1.lan:80 check inter 1s
-  server compute2 compute2.okd.ms1.lan:80 check inter 1s
+  server compute1 10.0.0.155:80 check
+  server compute2 10.0.0.160:80 check
+  
